--- a/junitmavenexample/junitmavenexample/pom.xml
+++ b/junitmavenexample/junitmavenexample/pom.xml
@@ -22,7 +22,11 @@
 		
 		
 		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
-
+<dependency>
+    <groupId>org.apache.struts</groupId>
+    <artifactId>struts2-core</artifactId>
+    <version>2.5.12</version>
+</dependency>
 
 	</dependencies>
 </project>
